<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/listImage"
        android:layout_width="70dp"
        android:layout_height="72dp"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:id="@+id/listTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@id/listImage"
        android:text="Titolo:"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/listAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/listTitle"
        android:layout_toRightOf="@id/listImage"
        android:text="Autore:"
        android:textSize="20dp"/>

</RelativeLayout>